# Bounce-the-Ball

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatiot/: arkkitehtuuri.md  kayttoohje.md  maarittelydokumentti.md  tuntikirjanpito.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: clock.py  gameloop.py  gamewindow.py  high_score.txt  index.py  pyproject.toml  settings.py
src/game/: ball.py  gameloop.py  gamewindow.py  platform.py  spriteball.py  star.py
src/game/sprites/: platform.py  spriteball.py  star.py
src/sprites/: platform.py  spriteball.py  star.py
src/tests/: ball_test.py  clock_test.py
src/ui/: end.py  start.py
