[tool.poetry]
name = "bounce_the_ball"
version = "0.1.0"
description = ""
authors = ["Nana Reinikainen <nana.reinikainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
